<resources>
    <string name="app_name">Todoc</string>
    <string name="a11y_add_new_task">Add new task</string>
    <string name="a11y_delete_task">Delete this task</string>
    <string name="empty_tasks">All done !</string>
    <string name="sort">Sort</string>
    <string name="project">Project</string>
    <string name="task_name">Task name</string>
    <string name="cant_insert_task">Oops ! Unable to add task…</string>
    <string name="create_new_task">Create new task</string>

    <string name="tartampion_project">Tartampion project</string>
    <string name="lucidia_project">Lucidia project</string>
    <string name="circus_project">Circus project</string>
</resources>